src/objects/Entitlement.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <formula>IF( ISBLANK(StartDate), 'Inactive', IF(TODAY() &lt; StartDate, 'Inactive', IF ( ISBLANK( EndDate), 'Active', IF(TODAY() &lt;= EndDate, 'Active', 'Expired'))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DCA_Serial__c</fullName>
        <description>This field is used to store DCA Product name</description>
        <label>DCA Serial #</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EH_FS_Flag__c</fullName>
        <label>EH SP Flag</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>FSNI</fullName>
                </value>
                <value>
                    <fullName>FS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <description>This field is used track actual End date of entitlement</description>
        <label>EndDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EntitlementSearchFields__c</fullName>
        <label>EntitlementSearchField</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entitlement_ID18__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <label>Entitlement ID18</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entitlement_Product_Name__c</fullName>
        <formula>ProductEntitlementMap__r.SFDC_Product_Name__c</formula>
        <label>Entitlement Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_id__c</fullName>
        <label>Legacy id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Length_of_Entitlement_Days_c__c</fullName>
        <description>8.23.18 Hidden field for reporting purposes created to catch 1 day entitlements that have been overwritten</description>
        <formula>EndDate  -  StartDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Length of Entitlement (Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Location_Reference_Number__c</fullName>
        <description>Location Reference Number is a field to store Location Reference.</description>
        <label>Location Reference Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Manual_Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Subscription</fullName>
                </value>
                <value>
                    <fullName>Perpetual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Non_Standard_Entitlement__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field will be true if entitlement process  non standard</description>
        <label>Non-Standard Entitlement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pivotal_Customer_Number__c</fullName>
        <description>This field is used to store Pivotal Customer Number.</description>
        <formula>Account.Pivotal_Customer_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pivotal Customer Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductEntitlementMap__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Entitlement Product</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>ProductEntitlementMap__c.SFDC_Product_Name__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ProductEntitlementMap__c</referenceTo>
        <relationshipLabel>Entitlements</relationshipLabel>
        <relationshipName>Entitlements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Descriptions__c</fullName>
        <label>Product Descriptions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Product_SKU__c</fullName>
        <formula>ProductEntitlementMap__r.Product_SKU__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SKU Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SKU_Name__c</fullName>
        <formula>ProductEntitlementMap__r.Products__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SKU Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Order__c</fullName>
        <description>This field is used to store sales order number</description>
        <label>Sales Order #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <description>This field is used track actual start date of entitlement</description>
        <label>StartDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Subscription_Product_Charge__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Subscription Charge Name</label>
        <referenceTo>Zuora__SubscriptionProductCharge__c</referenceTo>
        <relationshipLabel>Entitlements</relationshipLabel>
        <relationshipName>Entitlements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Subscription__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Subscription</label>
        <referenceTo>Zuora__Subscription__c</referenceTo>
        <relationshipLabel>Entitlements</relationshipLabel>
        <relationshipName>Entitlements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Support_Exception__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field will be true when user have support exception</description>
        <label>Support Exception</label>
        <type>Checkbox</type>
    </fields>
    <sharingModel>ControlledByParent</sharingModel>
    <listViews>
        <fullName>Active_Entitlements</fullName>
        <columns>ENTITLEMENT.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>ENTITLEMENT.STARTDATE</columns>
        <columns>ENTITLEMENT.ENDDATE</columns>
        <columns>ENTITLEMENT.STATUS</columns>
        <columns>DCA_Serial__c</columns>
        <columns>Subscription__c</columns>
        <columns>Product_SKU__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ENTITLEMENT.NAME</field>
            <operation>contains</operation>
            <value>Greenplum</value>
        </filters>
        <label>Active Entitlements</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Entitlements</fullName>
        <columns>ENTITLEMENT.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>ENTITLEMENT.STARTDATE</columns>
        <columns>ENTITLEMENT.ENDDATE</columns>
        <columns>ENTITLEMENT.STATUS</columns>
        <columns>DCA_Serial__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Entitlements</label>
    </listViews>
    <listViews>
        <fullName>Inactive_Entitlements</fullName>
        <columns>ENTITLEMENT.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>ENTITLEMENT.STARTDATE</columns>
        <columns>ENTITLEMENT.ENDDATE</columns>
        <columns>ENTITLEMENT.STATUS</columns>
        <columns>DCA_Serial__c</columns>
        <columns>Subscription__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>Inactive</value>
        </filters>
        <label>Inactive Entitlements</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
</CustomObject>